--- a/css/12bool.css
+++ b/css/12bool.css
@@ -226,44 +226,46 @@
 }
 
 
-/* *************offset************** */
+/* *************offset XS************** */
 
-.col-offset-1{
+.col-xs-offset-1{
   margin-left: calc((100% / 12) * 1);
 }
-.col-offset-2{
+.col-xs-offset-2{
   margin-left: calc((100% / 12) * 2);
 }
-.col-offset-3{
+.col-xs-offset-3{
   margin-left: calc((100% / 12) * 3);
 }
-.col-offset-4{
+.col-xs-offset-4{
   margin-left: calc((100% / 12) * 4);
 }
-.col-offset-5{
+.col-xs-offset-5{
   margin-left: calc((100% / 12) * 5);
 }
-.col-offset-6{
+.col-xs-offset-6{
   margin-left: calc((100% / 12) * 6);
 }
-.col-offset-7{
+.col-xs-offset-7{
   margin-left: calc((100% / 12) * 7);
 }
-.col-offset-8{
+.col-xs-offset-8{
   margin-left: calc((100% / 12) * 8);
 }
-.col-offset-9{
+.col-xs-offset-9{
   margin-left: calc((100% / 12) * 9);
 }
-.col-offset-10{
+.col-xs-offset-10{
   margin-left: calc((100% / 12) * 10);
 }
-.col-offset-11{
+.col-xs-offset-11{
   margin-left: calc((100% / 12) * 11);
 }
-.col-offset-12{
+.col-xs-offset-12{
   margin-left: calc((100% / 12) * 12);
 }
+
+
 
 
 /* **********mediaquery*********** */
@@ -319,6 +321,46 @@
     flex-basis: calc((100% /12) * 12);
     max-width: calc((100% /12) * 12);
   }
+
+  /* *************offset XS************** */
+
+  .col-xs-offset-1{
+    margin-left: calc((100% / 12) * 1);
+  }
+  .col-xs-offset-2{
+    margin-left: calc((100% / 12) * 2);
+  }
+  .col-xs-offset-3{
+    margin-left: calc((100% / 12) * 3);
+  }
+  .col-xs-offset-4{
+    margin-left: calc((100% / 12) * 4);
+  }
+  .col-xs-offset-5{
+    margin-left: calc((100% / 12) * 5);
+  }
+  .col-xs-offset-6{
+    margin-left: calc((100% / 12) * 6);
+  }
+  .col-xs-offset-7{
+    margin-left: calc((100% / 12) * 7);
+  }
+  .col-xs-offset-8{
+    margin-left: calc((100% / 12) * 8);
+  }
+  .col-xs-offset-9{
+    margin-left: calc((100% / 12) * 9);
+  }
+  .col-xs-offset-10{
+    margin-left: calc((100% / 12) * 10);
+  }
+  .col-xs-offset-11{
+    margin-left: calc((100% / 12) * 11);
+  }
+  .col-xs-offset-12{
+    margin-left: calc((100% / 12) * 12);
+  }
+
 }
 
 @media all and (min-width: 576px){
@@ -369,6 +411,45 @@
   .col-sm-12{
     flex-basis: calc((100% /12) * 12);
     max-width: calc((100% /12) * 12);
+  }
+
+  /* *************offset SM************** */
+
+  .col-sm-offset-1{
+    margin-left: calc((100% / 12) * 1);
+  }
+  .col-sm-offset-2{
+    margin-left: calc((100% / 12) * 2);
+  }
+  .col-sm-offset-3{
+    margin-left: calc((100% / 12) * 3);
+  }
+  .col-sm-offset-4{
+    margin-left: calc((100% / 12) * 4);
+  }
+  .col-sm-offset-5{
+    margin-left: calc((100% / 12) * 5);
+  }
+  .col-sm-offset-6{
+    margin-left: calc((100% / 12) * 6);
+  }
+  .col-sm-offset-7{
+    margin-left: calc((100% / 12) * 7);
+  }
+  .col-sm-offset-8{
+    margin-left: calc((100% / 12) * 8);
+  }
+  .col-sm-offset-9{
+    margin-left: calc((100% / 12) * 9);
+  }
+  .col-sm-offset-10{
+    margin-left: calc((100% / 12) * 10);
+  }
+  .col-sm-offset-11{
+    margin-left: calc((100% / 12) * 11);
+  }
+  .col-sm-offset-12{
+    margin-left: calc((100% / 12) * 12);
   }
 }
 
@@ -421,6 +502,45 @@
     flex-basis: calc((100% /12) * 12);
     max-width: calc((100% /12) * 12);
   }
+
+  /* *************offset MD************** */ 
+
+  .col-md-offset-1{
+    margin-left: calc((100% / 12) * 1);
+  }
+  .col-md-offset-2{
+    margin-left: calc((100% / 12) * 2);
+  }
+  .col-md-offset-3{
+    margin-left: calc((100% / 12) * 3);
+  }
+  .col-md-offset-4{
+    margin-left: calc((100% / 12) * 4);
+  }
+  .col-md-offset-5{
+    margin-left: calc((100% / 12) * 5);
+  }
+  .col-md-offset-6{
+    margin-left: calc((100% / 12) * 6);
+  }
+  .col-md-offset-7{
+    margin-left: calc((100% / 12) * 7);
+  }
+  .col-md-offset-8{
+    margin-left: calc((100% / 12) * 8);
+  }
+  .col-md-offset-9{
+    margin-left: calc((100% / 12) * 9);
+  }
+  .col-md-offset-10{
+    margin-left: calc((100% / 12) * 10);
+  }
+  .col-md-offset-11{
+    margin-left: calc((100% / 12) * 11);
+  }
+  .col-md-offset-12{
+    margin-left: calc((100% / 12) * 12);
+  }
 }
 
 @media all and (min-width: 1200px){
@@ -471,5 +591,48 @@
   .col-lg-12{
     flex-basis: calc((100% /12) * 12);
     max-width: calc((100% /12) * 12);
+  }
+
+  /* ****offset**** */
+
+  .col-lg-offset-0{
+    margin-left: 0;
+  }
+
+  .col-lg-offset-1{
+    margin-left: calc((100% / 12) * 1);
+  }
+  .col-lg-offset-2{
+    margin-left: calc((100% / 12) * 2);
+  }
+  .col-lg-offset-3{
+    margin-left: calc((100% / 12) * 3);
+  }
+  .col-lg-offset-4{
+    margin-left: calc((100% / 12) * 4);
+  }
+  .col-lg-offset-5{
+    margin-left: calc((100% / 12) * 5);
+  }
+  .col-lg-offset-6{
+    margin-left: calc((100% / 12) * 6);
+  }
+  .col-lg-offset-7{
+    margin-left: calc((100% / 12) * 7);
+  }
+  .col-lg-offset-8{
+    margin-left: calc((100% / 12) * 8);
+  }
+  .col-lg-offset-9{
+    margin-left: calc((100% / 12) * 9);
+  }
+  .col-lg-offset-10{
+    margin-left: calc((100% / 12) * 10);
+  }
+  .col-lg-offset-11{
+    margin-left: calc((100% / 12) * 11);
+  }
+  .col-lg-offset-12{
+    margin-left: calc((100% / 12) * 12);
   }
 }
