--- a/css/12bool.css
+++ b/css/12bool.css
@@ -324,6 +324,10 @@
 
   /* *************offset XS************** */
 
+  .col-xs-offset-0{
+    margin-left: 0;
+  }
+
   .col-xs-offset-1{
     margin-left: calc((100% / 12) * 1);
   }
@@ -415,6 +419,10 @@
 
   /* *************offset SM************** */
 
+  .col-sm-offset-0{
+    margin-left: 0;
+  }
+
   .col-sm-offset-1{
     margin-left: calc((100% / 12) * 1);
   }
@@ -504,6 +512,10 @@
   }
 
   /* *************offset MD************** */ 
+
+  .col-md-offset-0{
+    margin-left: 0;
+  }
 
   .col-md-offset-1{
     margin-left: calc((100% / 12) * 1);
